--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,7 +1,7 @@
 // breakpoints
 $desktop: 1800px;
-$tablet_landscape: 1200px;
-$tablet_portrait: 900px;
+$landscape: 1200px;
+$portrait: 900px;
 $phone: 600px;
 $xsmall: 400px;
 
