--- a/src/styles/thumbnail.scss
+++ b/src/styles/thumbnail.scss
@@ -27,7 +27,7 @@
 }
 
 @mixin mobileRecentPosts {
-  @include mQ($tablet_portrait){
+  @include mQ($portrait){
     height: 200px;
   }
   @include mQ($phone){
