--- a/src/styles/Landing/show.scss
+++ b/src/styles/Landing/show.scss
@@ -15,16 +15,16 @@
             background: url(./img/graphics/showRoom.jpg);
             @include background;
             box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
-            @include mQ($tablet_portrait) {
+            @include mQ($portrait) {
                 display: none;
             }
         }
         &--text {
             width: 45%;
-            @include mQ($tablet_landscape) {
+            @include mQ($landscape) {
                 width: 50%;
             }
-            @include mQ($tablet_portrait) {
+            @include mQ($portrait) {
                 width: 100%;
             }
         }
@@ -41,17 +41,17 @@
         &--seeMore {
             padding: 20px 0px;
         }
-        @include mQ($tablet_landscape) {
+        @include mQ($landscape) {
             width: 90%;
         }
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             width: 100%;
         }
         @include mQ($phone) {
             margin: 0;
         }
     }
-    @include mQ($tablet_portrait) {
+    @include mQ($portrait) {
         margin-bottom: 0;
     }
 }
