--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @include mQ($tablet_portrait) {
+    @include mQ($portrait) {
       width: 90vw;
       margin-top: 5px;
     }
@@ -34,7 +34,7 @@
           height: 25px;
         }
       }
-      @include mQ($tablet_portrait) {
+      @include mQ($portrait) {
         padding-left: 10%;
       }
     }
@@ -45,14 +45,14 @@
         justify-content: flex-start;
         .item {
           width: 25%;
-          @include mQ($tablet_portrait) {
+          @include mQ($portrait) {
             width: 45%;
           }
           @include mQ($phone) {
             width: 90%;
           }
         }
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
           flex-wrap: wrap;
           padding-left: 10%;
         }
@@ -64,6 +64,9 @@
       &--item {
         padding: 2px 10px;
         font-size: 13px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
     }
     &__comments {
