--- a/src/styles/category-page.scss
+++ b/src/styles/category-page.scss
@@ -14,7 +14,7 @@
                     width: 400px;
                     height: 200px;
                     @include background;
-                    @include mQ($tablet_portrait) {
+                    @include mQ($portrait) {
                         width: 300px;
                         height: 200px;
                     }
@@ -64,11 +64,11 @@
             justify-content: flex-start;
             li {
                 margin: 10px 10px;
-                @include mQ($tablet_portrait) {
+                @include mQ($portrait) {
                     margin: 5px;
                 }
             }
-            @include mQ($tablet_portrait) {
+            @include mQ($portrait) {
                 width: 100%;
             }
         }
