--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -13,7 +13,7 @@
         color: $black;
         padding-left: 10%;
         box-sizing: border-box;
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             width: 100%;
             padding: 0;
             order: 1;
@@ -24,13 +24,13 @@
     .copyright {
         width: 100%;
         text-align: center;
-        //@include mQ($tablet_portrait) {
+        //@include mQ($portrait) {
         //    height: 100%;
           //  display: flex;
           //  flex-direction: column;
           //  justify-content: flex-end;
         //}
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             font-size: 12px;
             order: 3;
             height: auto;
@@ -51,14 +51,14 @@
                 transform: scale(1.2);
             }
         }
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             order: 2;
             width: 100%;
             padding: 30px 0;
             height: auto;
         }
     }
-    @include mQ($tablet_portrait) {
+    @include mQ($portrait) {
         flex-direction: column;
         height: 130px;
     }
