--- a/src/styles/toolbox.scss
+++ b/src/styles/toolbox.scss
@@ -25,18 +25,18 @@
     margin-left: 10% !important;
     &__types {
         display: flex;
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             flex-direction: column;
         }
         &--left {
             width: 40%;
-            @include mQ($tablet_portrait) {
+            @include mQ($portrait) {
                 width: 100%;
             }
         }
         &--right {
             width: 40%;
-            @include mQ($tablet_portrait) {
+            @include mQ($portrait) {
                 width: 100%;
             }
         }
@@ -44,7 +44,7 @@
     &__list {
         width: 100%;
         margin-top: 30px;
-        @include mQ($tablet_portrait) {
+        @include mQ($portrait) {
             width: 80%;
         }
         @include mQ($phone) {
