--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -119,4 +119,12 @@
             background: url(./img/graphics/Author.jpg);
         }
     }
+
+    .section-5 {
+        .partners_list {
+            img {
+                max-width: 80vw;
+            }
+        }
+    }
 }
