Zmiana tla dla strony UnderConstruction na jpg

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -33,11 +33,8 @@
         } 
     }
     // SECTION 1
-    .section-1 {
-        .info--img {
-            background: url(./img/graphics/Hello.jpg);
-        }
-    }
+    // .section-1 {
+    // }
     // SECTION 2
     .section-2 {
         margin-top: 80px;
