--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -83,7 +83,7 @@ strong {
   height: 100%;
   @include background;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%), url(./img/graphics/UnderConstruction.webp);
+  background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%), url(./img/graphics/UnderConstruction.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
