--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -247,4 +247,5 @@
     @include SubcategoryBackgroundColor('js', $js);
     @include SubcategoryBackgroundColor('web', $web);
     @include SubcategoryBackgroundColor('prod', $prod);
+    @include SubcategoryBackgroundColor('frontops', $frontops);
 }
