--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -44,14 +44,17 @@
                 align-items: center;
                 justify-content: center;
                 .social--fb, .social--twitter, .email {
-                    padding: 10px 5px 30px 5px;
+                    padding: 10px 10px 30px 10px;
                     transition: 0.2s;
                     &:hover {
                         transition: 0.2s;
                         transform: scale(1.2);
                     }
                     img {
-                        width: 50px;
+                        width: 80px;
+                        @include mQ($phone) {
+                            width: 50px;
+                        }
                     }
                 }
             }
