--- a/src/styles/Landing/header.scss
+++ b/src/styles/Landing/header.scss
@@ -166,7 +166,7 @@
     }
 }
 
-.header__news {
+.header__toolboxes {
     width: 25%;
     position: relative;
     &__container {
@@ -184,51 +184,40 @@
         align-items: center;
         background: $lighten-grey;
         &--item {
-            box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2);
-            &:last-child {
-                box-shadow: none;
-            }
-            height: 20%;
+            height: 25%;
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
             width: 90%;
-            .news-title {
-                a {
-                    color: $black;
-                    width: 90%;
-                    font-family: "Roboto-Regular";
-                    font-size: 14px;
-                    line-height: 19px;
+            // border: 1px solid $black;
+            // width: 100%;
+            margin: 10px;
+            transition: 0.2s;
+            box-sizing: border-box;
+            &.js {
+                background: url(./img/graphics/tools1.jpg);
+                @include background;
+                border-bottom: none;
+                margin-top: 5%;
+            }
+            &.web {
+                background: lightgreen;
+            }
+            .toolboxes-title {
+                width: 50%;
+                text-align: center;
+                background: $black;
+                padding: 0 3px;
+                &--link {
+                    display: inline-block;
+                    width: 100%;
+                    padding: 3px;
+                    color: white;
+                    font-family: "Roboto-Medium";
+                    font-size: 26px;
                     letter-spacing: 1px;
                     position: relative;
                     cursor: pointer;
-                    @include underline(2px, $red);
-                    @include mQ($portrait) {
-                        line-height: 16px;
-                    }
-                }
-            }
-            .news__data {
-                font-size: 10px;
-                font-family: "Roboto-Medium";
-                margin-right: 10px;
-                .date {
-                    padding: 2px 5px;
-                }
-                .day {
-                    border: 1px solid $black;
-                    border-radius: 4px 4px 0 0;
-                    background: white;
-                }
-                .month {
-                    color: white;
-                    background: $black;
-                    border: 1px solid $black;
-                    border-radius: 0 0 4px 4px;
-                }
-                @include mQ($portrait) {
-                    display: none;
                 }
             }
             @include mQ($phone) {
