--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -258,4 +258,5 @@
     @include SubcategoryBackgroundColor('web', $web);
     @include SubcategoryBackgroundColor('prod', $prod);
     @include SubcategoryBackgroundColor('frontops', $frontops);
+    @include SubcategoryBackgroundColor('voice', $voice);
 }
